test/runnable/versions.nt
module versions;

struct S {
    int a;
    version (generation1) int b;
    version (doesntExist) string c;
}

class C {
    int a;
    version (generation1) int b;
    version (doesntExist) string c;
    this(this.a, this.b) { }
}

void main() {
    S s = S(2, 3);
    C c = new C(2, 3);
}
