test/fail_compilation/named_arg_class.nt
module named_arg_class;

class C {
    this() { }
    void foo(int i) { }
}

void main() {
    (new C).foo(j=1);
}
